--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "neat-python>=1.1.0",
     "pygame>=2.6.1",
+    "streamlit>=1.53.1",
 ]
